pre 100